# models/user-postgres.js
@@ -11,17 +11,35 @@ async function create(email, name) {
     });
 }
 
-async function createMany(number) {
-    const users = [];
-    for (let i = 0; i < number; i++) {
+async function createMany(number, batch) {
+    number = parseInt(number);
+    batch = parseInt(batch);
+    let users = [];
+    let count = 0;
+    
+    for(let i = 0; i < number; i++) {
         users.push({
             email: uuidv4() + '@test.com',
             name: uuidv4()
         });
+
+        if(users.length === batch) {
+            let result = await prisma.user.createMany({
+                data: users
+            });
+            count += result.count;
+            users = [];
+        }
     }
-    return prisma.user.createMany({
-        data: users
-    });
+
+    if(users.length > 0) {
+        let result = await prisma.user.createMany({
+            data: users
+        });
+        count += result.count;
+    }
+
+    return { "count": count };
 }
 
 async function findById(id) {
@@ -32,24 +50,44 @@ async function findById(id) {
     });
 }
 
-async function findAll() {
-    return prisma.user.findMany();
+async function findAll(skip, take) {
+    return prisma.user.findMany({
+        skip: parseInt(skip) || undefined,
+        take: parseInt(take) || undefined
+    });
 }
 
-async function findFollowers(id) {
+async function findFollowers(id, skip, take){
     return prisma.user.findUnique({
         where: {
             id: parseInt(id)
         }
-    }).followers();
+    }).followers({
+        skip: parseInt(skip) || undefined,
+        take: parseInt(take) || undefined
+    });
 }
 
-async function findFollowing(id) {
+async function findFollowing(id, skip, take) {
     return prisma.user.findUnique({
         where: {
             id: parseInt(id)
         }
-    }).following();
+    }).following({
+        skip: parseInt(skip) || undefined,
+        take: parseInt(take) || undefined
+    });
+}
+
+async function findPurchase(id, skip, take) {
+    return prisma.user.findUnique({
+        where: {
+            id: parseInt(id)
+        }
+    }).purchase({
+        skip: parseInt(skip) || undefined,
+        take: parseInt(take) || undefined
+    });
 }
 
 async function update(id, email, name) {
@@ -79,6 +117,36 @@ async function follow(id, personToFollowId) {
     });
 }
 
+async function unfollow(id, personToUnfollowId) {
+    return prisma.user.update({
+        where: {
+            id: parseInt(id)
+        },
+        data: {
+            following: {
+                disconnect: {
+                    id: parseInt(personToUnfollowId) || undefined
+                }
+            }
+        }
+    });
+}
+
+async function purchase(id, productId) {
+    return prisma.user.update({
+        where: {
+            id: parseInt(id)
+        },
+        data: {
+            purchase: {
+                connect: {
+                    id: parseInt(productId) || undefined
+                }
+            }
+        }
+    });
+}
+
 async function remove(id) {
     return prisma.user.delete({
         where: {
@@ -94,7 +162,10 @@ module.exports = {
     findAll: findAll,
     findFollowers: findFollowers,
     findFollowing: findFollowing,
+    findPurchase: findPurchase,
     update: update,
     follow: follow,
+    unfollow: unfollow,
+    purchase: purchase,
     remove: remove
 };
